--- a/KinectMathGames/App.xaml
+++ b/KinectMathGames/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:KinectMathGames"
-             StartupUri="Gui/MainWindow.xaml">
+             StartupUri="Gui/Graph.xaml">
     <Application.Resources>
          
     </Application.Resources>
