--- a/KinectMathGames/Gui/MainWindow.xaml
+++ b/KinectMathGames/Gui/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KinectMathGames"
+        xmlns:local="clr-namespace:KinectMathGames.Gui"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" WindowStartupLocation="CenterScreen" MinWidth="650" MinHeight="400">
     <Grid Background="#FF121212">
@@ -50,18 +50,18 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Label Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="14" Grid.RowSpan="8" Content="MotionScape" FontWeight="Bold" FontSize="96" HorizontalAlignment="Center" Background="#00000000" Foreground="#DDFFFFFF" VerticalAlignment="Center" FontFamily="Microsoft YaHei UI Light"/>
-            <Button Grid.Row="9" Grid.Column="6" Grid.ColumnSpan="4" Grid.RowSpan="2" Content="VELOCITY" FontFamily="Microsoft YaHei UI" FontSize="20" Background="#FF8686FC" Margin="8,0" Foreground="#DD000000" BorderBrush="#00707070">
+            <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="16" Grid.RowSpan="8" Content="MotionScape" FontWeight="Bold" FontSize="96" HorizontalAlignment="Center" Background="#00000000" Foreground="#DDFFFFFF" VerticalAlignment="Center" FontFamily="Microsoft YaHei UI Light" Margin="0,10,2,10" Width="580"/>
+            <Button Grid.Row="10" Grid.Column="6" Grid.ColumnSpan="4" Grid.RowSpan="2" Content="VELOCITY" FontFamily="Microsoft YaHei UI" FontSize="20" Background="#FF8686FC" Margin="8,0" Foreground="#DD000000" BorderBrush="#00707070">
                 <Button.Effect>
                     <DropShadowEffect/>
                 </Button.Effect>
             </Button>
-            <Button Grid.Row="9" Grid.Column="2" Grid.ColumnSpan="4" Grid.RowSpan="2" Content="POSITION" FontFamily="Microsoft YaHei UI" FontSize="20" Background="#FF8686FC" Foreground="#DD000000" Margin="8,0" BorderBrush="#00707070">
+            <Button Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="4" Grid.RowSpan="2" Content="POSITION" FontFamily="Microsoft YaHei UI" FontSize="20" Background="#FF8686FC" Foreground="#DD000000" Margin="8,0" BorderBrush="#00707070">
                 <Button.Effect>
                     <DropShadowEffect/>
                 </Button.Effect>
             </Button>
-            <Button Grid.Row="9" Grid.Column="10" Grid.ColumnSpan="4" Grid.RowSpan="2" Content="GRAPH" FontFamily="Microsoft YaHei UI" FontSize="20" Background="#FF8686FC" Margin="8,0" Foreground="#DD000000" BorderBrush="#00707070">
+            <Button Grid.Row="10" Grid.Column="10" Grid.ColumnSpan="4" Grid.RowSpan="2" Content="GRAPH" FontFamily="Microsoft YaHei UI" FontSize="20" Background="#FF8686FC" Margin="8,0" Foreground="#DD000000" BorderBrush="#00707070">
                 <Button.Effect>
                     <DropShadowEffect/>
                 </Button.Effect>
