--- a/KinectMathGames/Gui/PositionWindow.xaml
+++ b/KinectMathGames/Gui/PositionWindow.xaml
@@ -8,18 +8,20 @@
         Title="PositionWindow" Height="450" Width="800">
 
     <Grid>
-        <Grid.Background>
-            <ImageBrush ImageSource="../Images/Graph.jpg" Stretch="Uniform"/>
-        </Grid.Background>
+        <Image Source="../Images/Graph.jpg"/>
         <Canvas Name="MyCanvas" Focusable="True" >
-            <Ellipse Name="rec1" Width="20" Height="20" Margin="0" Canvas.Left="380" Canvas.Top="208">
+            <Ellipse Name="cursor" Width="20" Height="20" Margin="0" Canvas.Left="380" Canvas.Top="208">
                 <Ellipse.Fill>
                     <SolidColorBrush Color="#7FE22B2B" />
                 </Ellipse.Fill>
             </Ellipse>
+        </Canvas>
+
+        <Canvas>
             <Label Name="txtscore" FontSize="30" FontWeight="Bold" Content="Score : 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="36"/>
             <Label Name="Position" FontSize="30" FontWeight="ExtraBold" Content="Position Game"/>
         </Canvas>
+
     </Grid>
 
 </Window>
