--- a/KinectMathGames/Gui/VelocityWindow.xaml
+++ b/KinectMathGames/Gui/VelocityWindow.xaml
@@ -6,13 +6,17 @@
         xmlns:local="clr-namespace:KinectMathGames"
         mc:Ignorable="d"
         Title="Velocity Game" Height="450" Width="800">
+
     <Grid>
-        <Canvas x:Name="MyCanVas" Focusable="True" Background="AliceBlue" RenderTransformOrigin="0.493,0.522" Margin="0,10,0.333,-10.333">
-
+        <Image Source="../Images/Graph.jpg"/>
+        <Canvas Name="MyCanvas" Focusable="True" >
+            <Ellipse Name="rec1" Tag="cursor" Width="20" Height="20" Margin="0" Canvas.Left="380" Canvas.Top="208">
+                <Ellipse.Fill>
+                    <SolidColorBrush Color="Black" />
+                </Ellipse.Fill>
+            </Ellipse>
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs1" Canvas.Left="450" Canvas.Top="229" RenderTransformOrigin="1.517,0.432" />
-
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs2" Canvas.Left="650" Canvas.Top="229" RenderTransformOrigin="0.667,-0.27" />
-
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs3" Canvas.Left="850" Canvas.Top="229" RenderTransformOrigin="0.567,-0.373" />
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs4" Canvas.Left="1050" Canvas.Top="229" RenderTransformOrigin="0.567,-0.373" />
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs5" Canvas.Left="1250" Canvas.Top="229" RenderTransformOrigin="0.567,-0.373" />
@@ -31,18 +35,10 @@
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs18" Canvas.Left="3850" Canvas.Top="229" RenderTransformOrigin="0.567,-0.373" />
             <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs19" Canvas.Left="4050" Canvas.Top="229" RenderTransformOrigin="0.567,-0.373" />
 
-            <Canvas Name="MyCanvas" Focusable="True" >
-                <Ellipse Name="cursor" Width="20" Height="20" Margin="0" Canvas.Left="380" Canvas.Top="208">
-                    <Ellipse.Fill>
-                        <SolidColorBrush Color="black"/>
-                    </Ellipse.Fill>
-                </Ellipse>
-            </Canvas>
-
             <Label Name="txtscore" FontSize="30" FontWeight="Bold" Content="Score : 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="36"/>
             <Label Name="VelocityText" FontSize="30" FontWeight="ExtraBold" Content="Velocity Game"/>
-
         </Canvas>
+
 
     </Grid>
 </Window>
