--- a/KinectMathGames/Gui/GraphWindow.xaml
+++ b/KinectMathGames/Gui/GraphWindow.xaml
@@ -6,14 +6,22 @@
         xmlns:local="clr-namespace:KinectMathGames.Gui"
         mc:Ignorable="d"
         Title="Graph" Height="450" Width="800" WindowStartupLocation="CenterScreen" MinWidth="650" MinHeight="400">
-    <Grid Background="White">
-        <Image Source="../Images/Graph.jpg"/>
-        <Canvas Name="MyCanvas" Focusable="True" >
-            <Ellipse Name="rec1" Width="20" Height="20" Margin="0" Canvas.Left="380" Canvas.Top="208">
-                <Ellipse.Fill>
-                    <SolidColorBrush Color="#7FE22B2B" />
-                </Ellipse.Fill>
-            </Ellipse>
-        </Canvas>
-    </Grid>
+    <Viewbox>
+        <Grid Background="White">
+            <!-- <Image Source="../Images/Graph.jpg" RenderTransformOrigin="0.488,0.518" Grid.RowSpan="2"/>-->
+            <Canvas Name="MyCanvas" Focusable="True" Height="100" Width="100" Margin="105,5,5,5">
+                <Line X1="0" X2="100" Y1="50" Y2="50" Stroke="Black" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                <Line X1="50" X2="50" Y1="0" Y2="100" Stroke="Black" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
+                <Ellipse Name="rec1" Width="10" Height="10" Canvas.Left="50" Canvas.Top="50" Margin="-5" SnapsToDevicePixels="True" Panel.ZIndex="2">
+                    <Ellipse.Fill>
+                        <SolidColorBrush Color="#7FE22B2B" />
+                    </Ellipse.Fill>
+                </Ellipse>
+            </Canvas>
+            <Label Content="y-pos:" HorizontalAlignment="Left" Margin="1,5,0,0" VerticalAlignment="Top" />
+            <Label Content="x-pos:" HorizontalAlignment="Left" Margin="1,31,0,0" VerticalAlignment="Top"/>
+            <Label Name="ypos" Content="0" HorizontalAlignment="Left" Margin="43,5,0,0" VerticalAlignment="Top"/>
+            <Label Name="xpos" Content="0" HorizontalAlignment="Left" Margin="43,31,0,0" VerticalAlignment="Top"/>
+        </Grid>
+    </Viewbox>
 </Window>
