--- a/KinectMathGames/Gui/GraphWindow.xaml
+++ b/KinectMathGames/Gui/GraphWindow.xaml
@@ -9,19 +9,16 @@
     <Viewbox>
         <Grid Background="White">
             <!-- <Image Source="../Images/Graph.jpg" RenderTransformOrigin="0.488,0.518" Grid.RowSpan="2"/>-->
-            <Canvas Name="MyCanvas" Focusable="True" Height="100" Width="100" Margin="105,5,5,5">
+            <Canvas Name="MyCanvas" Focusable="True" Height="100" Width="100" Margin="105,5,5,5" ClipToBounds="True">
                 <Line X1="0" X2="100" Y1="50" Y2="50" Stroke="Black" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
                 <Line X1="50" X2="50" Y1="0" Y2="100" Stroke="Black" SnapsToDevicePixels="True" Panel.ZIndex="1"/>
-                <Ellipse Name="rec1" Width="10" Height="10" Canvas.Left="50" Canvas.Top="50" Margin="-5" SnapsToDevicePixels="True" Panel.ZIndex="2">
+                <Ellipse Name="rec1" Width="10" Height="10" Canvas.Left="50" Canvas.Top="50" Margin="-5" SnapsToDevicePixels="True" Panel.ZIndex="4">
                     <Ellipse.Fill>
                         <SolidColorBrush Color="#7FE22B2B" />
                     </Ellipse.Fill>
                 </Ellipse>
             </Canvas>
-            <Label Content="y-pos:" HorizontalAlignment="Left" Margin="1,5,0,0" VerticalAlignment="Top" />
-            <Label Content="x-pos:" HorizontalAlignment="Left" Margin="1,31,0,0" VerticalAlignment="Top"/>
-            <Label Name="ypos" Content="0" HorizontalAlignment="Left" Margin="43,5,0,0" VerticalAlignment="Top"/>
-            <Label Name="xpos" Content="0" HorizontalAlignment="Left" Margin="43,31,0,0" VerticalAlignment="Top"/>
+            <TextBlock Name="pointSlopeLbl" Text="fx = 3/4x+b" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="83" TextAlignment="Center" Typography.Fraction="Stacked" FontSize="6"/>
         </Grid>
     </Viewbox>
 </Window>
