--- a/KinectMathGames/Gui/PositionWindow.xaml
+++ b/KinectMathGames/Gui/PositionWindow.xaml
@@ -15,6 +15,29 @@
                         <SolidColorBrush Color="#7FE22B2B" />
                     </Ellipse.Fill>
                 </Ellipse>
+                <Rectangle Name="curRec" Width="20" Height="20" Canvas.Top="138" Canvas.Left="142" StrokeThickness="3" Fill="Blue" Stroke="Red"/>
+                <!--Fill="Blue" Stroke="Red"  -->
+                <Rectangle Name="rec1" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" Fill="Blue" Stroke="Red"/>
+                <Rectangle Name="rec2" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec3" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec4" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec5" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec6" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec7" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec8" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec9" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec10" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec11" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec12" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec13" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec14" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec15" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec16" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec17" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec18" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec19" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+                <Rectangle Name="rec20" Width="50" Height="40" Canvas.Top="128" Canvas.Left="453" StrokeThickness="3" />
+
                 <Image Name="img1" Height="40" Width="50" Source="../Images/circle.png" Tag="Gate1" Canvas.Left="453" Canvas.Top="128" RenderTransformOrigin="1.517,0.432"  />
                 <Image Name="img2" Height="40" Width="50" Source="../Images/circle.png" Tag="Gate2" Canvas.Left="453" Canvas.Top="128" RenderTransformOrigin="1.517,0.432"  />
                 <Image Name="img3" Height="40" Width="50" Source="../Images/circle.png" Tag="Gate3" Canvas.Left="453" Canvas.Top="128" RenderTransformOrigin="1.517,0.432"  />
@@ -139,6 +162,11 @@
                         <BeginStoryboard >
                             <Storyboard Storyboard.TargetName="img20" Storyboard.TargetProperty="(Canvas.Left)">
                                 <DoubleAnimation From="453" To="-160" SpeedRatio=".15" BeginTime="0:0:38" AutoReverse="False"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                        <BeginStoryboard >
+                            <Storyboard Storyboard.TargetName="rec1" Storyboard.TargetProperty="(Canvas.Left)">
+                                <DoubleAnimation From="453" To="-160" SpeedRatio=".15" AutoReverse="False"/>
                             </Storyboard>
                         </BeginStoryboard>
                     </EventTrigger>
