--- a/KinectMathGames/Gui/VelocityWindow.xaml
+++ b/KinectMathGames/Gui/VelocityWindow.xaml
@@ -7,28 +7,30 @@
         mc:Ignorable="d"
         Title="Velocity Game" Height="450" Width="800">
 
-    <Grid>
-        <Image Source="../Images/Graph.jpg"/>
-        <Canvas Name="MyCanvas" Focusable="True" >
-            <Ellipse Name="rec1" Tag="cursor" Width="20" Height="20" Margin="0" Canvas.Left="380" Canvas.Top="208">
-                <Ellipse.Fill>
-                    <SolidColorBrush Color="Black" />
-                </Ellipse.Fill>
-            </Ellipse>
-            <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs1" Canvas.Left="850" Canvas.Top="200" RenderTransformOrigin="1.517,0.432" />
-            <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs2" Canvas.Left="1150" Canvas.Top="30" RenderTransformOrigin="0.667,-0.27" />
-            <Image Height="40" Width="50" Source="../Images/circle.png" Tag="obs3" Canvas.Left="1400" Canvas.Top="350" RenderTransformOrigin="0.567,-0.373" />
+    <Viewbox>
+        <Grid>
+            <Image Source="../Images/Graph.jpg"/>
+            <Canvas Name="MyCanvas" Focusable="True" >
+                <Ellipse Name="rec1" Tag="cursor" Width="20" Height="20" Margin="0" Canvas.Left="135" Canvas.Top="135">
+                    <Ellipse.Fill>
+                        <SolidColorBrush Color="Black" />
+                    </Ellipse.Fill>
+                </Ellipse>
+                <Image Height="40" Width="30" Source="../Images/circle.png" Tag="obs1" Canvas.Left="385" Canvas.Top="115" RenderTransformOrigin="1.517,0.432" />
+                <Image Height="40" Width="30" Source="../Images/circle.png" Tag="obs2" Canvas.Left="621" Canvas.Top="10" RenderTransformOrigin="0.667,-0.27" />
+                <Image Height="40" Width="30" Source="../Images/circle.png" Tag="obs3" Canvas.Left="796" Canvas.Top="219" RenderTransformOrigin="0.567,-0.373" />
 
 
-            <Label Name="txtscore" FontSize="30" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="36"/>
-            <Label Name="VelocityText" FontSize="30" FontWeight="ExtraBold" Content="Velocity Game"/>
-            <Label x:Name="WinText" Content="" Canvas.Left="163" Canvas.Top="93" Height="242" Width="458" FontSize="35" FontWeight="ExtraBold"/>
-            <Button x:Name="ResetButton_Copy" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="94" Height="42" FontSize="20" Click="ResetButton_Click" Canvas.Left="689" Canvas.Top="339"/>
-            <Button x:Name="BackButton" Content="Back" Canvas.Left="61" Canvas.Top="339" Width="94" Height="42" FontSize="20" Click="BackButton_Click"/>
-            <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="94" Height="42" FontSize="20" Canvas.Left="577" Canvas.Top="339" Click="PauseButton_Click"/>
-        </Canvas>
+                <Label Name="txtscore" FontSize="20" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="36"  Canvas.Left="-113"/>
+                <Label Name="VelocityText" FontSize="20" FontWeight="ExtraBold" Content="Velocity Game"  Canvas.Left="-113"/>
+                <Label x:Name="WinText" Content="" Canvas.Left="10" Canvas.Top="42" Height="168" Width="386" FontSize="20" FontWeight="ExtraBold"/>
+                <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="40" Height="22" FontSize="15" Click="ResetButton_Click" Canvas.Left="-113" Canvas.Top="217"/>
+                <Button x:Name="BackButton" Content="Back" Canvas.Left="-113" Canvas.Top="244" Width="40" Height="22" FontSize="15" Click="BackButton_Click"/>
+                <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="57" Height="38" FontSize="15" Canvas.Left="301" Canvas.Top="219" Click="PauseButton_Click"/>
+            </Canvas>
 
 
 
-    </Grid>
+        </Grid>
+    </Viewbox>
 </Window>
