Finalized Graph Game

--- a/KinectMathGames/Gui/GraphWindow.xaml
+++ b/KinectMathGames/Gui/GraphWindow.xaml
@@ -5,7 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:KinectMathGames.Gui"
         mc:Ignorable="d"
-        Title="Graph" Height="824" Width="1464.889" WindowStartupLocation="CenterScreen" MinWidth="650" MinHeight="400">
+        Title="Graph" Height="844" Width="1464.889" WindowStartupLocation="CenterScreen" MinWidth="650" MinHeight="400">
+    <Window.Resources >
+        <ResourceDictionary >
+            <ImageSource x:Key="SettingsIcon">/Images/SettingsIcon.png</ImageSource>
+            <ImageSource x:Key="PauseIcon">/Images/PauseIcon.png</ImageSource>
+            <ImageSource x:Key="PlayIcon">/Images/PlayIcon.png</ImageSource>
+        </ResourceDictionary>
+    </Window.Resources>
     <Viewbox>
         <Grid Background="White">
             <!-- <Image Source="../Images/Graph.jpg" RenderTransformOrigin="0.488,0.518" Grid.RowSpan="2"/>-->
@@ -19,9 +26,14 @@
                 </Ellipse>
             </Canvas>
             <TextBlock Name="pointSlopeLbl" Text="Graph Guesser" HorizontalAlignment="Left" Margin="5,5,0,94" Width="95" TextAlignment="Center" Typography.Fraction="Stacked" FontSize="8"/>
-            <Button Name="quitButton" Content="Quit" HorizontalAlignment="Left" Margin="5,0,0,5" VerticalAlignment="Bottom" Width="45" Click="QuitClick" Height="14" FontSize="7" FontWeight="Bold"/>
-            <Button Name="startResetButton" Content="Start" HorizontalAlignment="Right" Margin="0,0,110,5" VerticalAlignment="Bottom" Width="45" Click="StartResetClick" Height="14" FontSize="7" FontWeight="Bold"/>
-            <TextBlock Name="textBlock" HorizontalAlignment="Left" Margin="5,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="65" Width="95" FontSize="3.5"><Run Text="&#x9;              &#x9;          ">
+            <Button Name="quitButton" Content="Quit" HorizontalAlignment="Left" Margin="5,0,0,1" VerticalAlignment="Bottom" Width="25" Click="QuitClick" Height="14" FontSize="7" FontWeight="Bold"/>
+            <Button Name="startResetButton" Content="Start" HorizontalAlignment="Right" Margin="0,0,129,1" VerticalAlignment="Bottom" Width="46" Click="StartResetClick" Height="14" FontSize="7" FontWeight="Bold"/>
+            <Button Tag="settings" Name="optionsButton" HorizontalAlignment="Right" Margin="0,0,110,1" VerticalAlignment="Bottom" Width="14" Click="OptionsClick" Height="14" FontSize="7" FontWeight="Bold">
+                <ContentControl>
+                    <Image Name="settingsIcon" Width="10" Height="10" Source="/Images/SettingsIcon.png"/>
+                </ContentControl>
+            </Button>
+            <TextBlock x:Name="instructions" HorizontalAlignment="Left" Margin="5,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="72" Width="95" FontSize="3.5"><Run Text="&#x9;              &#x9;          ">
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
@@ -65,7 +77,11 @@
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
-                </Run><LineBreak/><Run Text="       otherwise no point is rewarded.">
+                </Run><LineBreak/><Run Text="       otherwise no point is rewarded. A bonus point is ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="       awarded for being further away from the slope origin.">
                     <Run.Background>
                         <ImageBrush/>
                     </Run.Background>
@@ -82,6 +98,7 @@
                         <ImageBrush/>
                     </Run.Background>
                 </Run></TextBlock>
+            <TextBlock Name="textBlock" HorizontalAlignment="Left" Margin="5,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="65" Width="95" FontSize="8"/>
         </Grid>
     </Viewbox>
 </Window>
